--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,17 @@
 asgiref==3.5.0
+cycler==0.11.0
 Django==4.0.3
+fonttools==4.32.0
 image==1.5.33
+kiwisolver==1.4.2
+matplotlib==3.5.1
 numpy==1.22.3
+opencv-python==4.5.5.64
+packaging==21.3
 Pillow==9.0.1
+pyparsing==3.0.8
+python-dateutil==2.8.2
 six==1.16.0
 sqlparse==0.4.2
+toml==0.10.2
 tzdata==2021.5
