--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,31 @@
 asgiref==3.5.0
+autopep8==1.6.0
+black==22.3.0
+click==8.1.3
+colorama==0.4.4
 cycler==0.11.0
 Django==4.0.3
 fonttools==4.32.0
 image==1.5.33
+joblib==1.1.0
 kiwisolver==1.4.2
 matplotlib==3.5.1
+mypy-extensions==0.4.3
 numpy==1.22.3
 opencv-python==4.5.5.64
 packaging==21.3
+pathspec==0.9.0
 Pillow==9.0.1
+platformdirs==2.5.2
+pycodestyle==2.8.0
 pyparsing==3.0.8
 python-dateutil==2.8.2
+scikit-learn==1.1.1
+scipy==1.8.1
 six==1.16.0
+sklearn==0.0
 sqlparse==0.4.2
+threadpoolctl==3.1.0
 toml==0.10.2
+tomli==2.0.1
 tzdata==2021.5
